# tree-sitter-curry

./: .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc.js  .travis.yml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  Package.swift  README.md  binding.gyp  eslint.config.js  go.mod  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: CODEOWNERS
.github/workflows/: build.yml  publish.yml  test.yml
bindings/c/: tree-sitter-curry.h  tree-sitter-curry.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_curry/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCurryTests/: TreeSitterCurryTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: pragmas.txt
