[package]
name = "tree-sitter-curry"
description = "Curry grammar for tree-sitter"
version = "0.0.3"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "curry"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/matthesjh/tree-sitter-curry"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0.87"
